--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
